# clubhouse-client

./: README.md  pyproject.toml
clubhouse/: __init__.py  api.py
shortcut/: __init__.py
tests/: test_clubhouse.py  test_shortcut.py
